<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="fondo"
    tools:context=".UserProfileActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/web2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:hint="@string/web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudad2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cp2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:hint="@string/codigopostal"
        app:layout_constraintEnd_toEndOf="@+id/prov2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/prov2"
        app:layout_constraintTop_toBottomOf="@+id/domic2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/domic2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:hint="@string/domicilio"
        app:layout_constraintEnd_toEndOf="@+id/cp2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/cp2"
        app:layout_constraintTop_toBottomOf="@+id/dni2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dni2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:hint="@string/dni"
        app:layout_constraintEnd_toEndOf="@+id/domic2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/domic2"
        app:layout_constraintTop_toBottomOf="@+id/email2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/dni2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/dni2"
        app:layout_constraintTop_toBottomOf="@+id/tel1" />

    <ImageView
        android:id="@+id/iconoSuperiorIzquierdo"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Volver"
        android:src="@drawable/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/borrarIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:onClick="@string/eliminatePerfil"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Nombre del Usuario"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudad" />

    <TextView
        android:id="@+id/ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ciudad"
        app:layout_constraintEnd_toEndOf="@+id/ciudad2"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provincia" />

    <TextView
        android:id="@+id/provincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/provincia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel" />

    <TextView
        android:id="@+id/cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/codigopostal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/domicilio" />

    <TextView
        android:id="@+id/domicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/domicilio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

    <TextView
        android:id="@+id/dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/provincia_description"
        android:text="@string/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoSuperiorIzquierdo" />

    <ImageView
        android:id="@+id/fotoperfil"
        android:layout_width="67dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/usernameTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tel1"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:hint="@string/telefono1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoperfil" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ciudad2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:hint="@string/ciudad"
        app:layout_constraintEnd_toEndOf="@+id/web2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/web2"
        app:layout_constraintTop_toBottomOf="@+id/prov2"
        tools:ignore="@string/ciudad,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/prov2"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:hint="@string/provincia"
        app:layout_constraintEnd_toEndOf="@+id/ciudad2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/ciudad2"
        app:layout_constraintTop_toBottomOf="@+id/cp2"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/PerfilEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/editarPerfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
